# support-desk-env

./: .gitignore  Dockerfile  PLAN.md  README.md  app.py  baseline_mistral.py  baseline_openai.py  client.py  environment.py  fixtures.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  validate_submission.py
server/: app.py
tests/: test_support_desk.py
